--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   font-family: "Raleway", sans-serif;
 }
 
-.active {
-  color: #3B82F6;
+.active{
+    color: #10B981;
+    border-radius: 20px;
 }
